--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,72 +1,38 @@
-# .github/workflows/release-please.yml
-
 name: Release Please
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:  # Allows manual triggering of the workflow
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  create-release:
+  release-please:
     runs-on: ubuntu-latest
     steps:
-      -
-        uses: actions/checkout@v4
-        # these if statements ensure that a publication only occurs when
-        # a new release is created:
-      -
-        name: Release Please Action
+
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'  # Specify the Python version
+
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Release Please Action
         uses: google-github-actions/release-please-action@v3
-        id: release
         with:
           release-type: python  # Specifies that it's a Python project
           # Optional configurations:
           # version-file: setup.py  # Specify the version file if different
           # bump-minor-pre-major: true
           # monorepo-tags: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-
-      -
-        name: Build Executables
-        uses: ./.github/workflows/build-executables.yml
-        if: ${{ steps.release.outputs.release_created }}
-
-      # Step 4: Attach Executables to Release
-      - name: Attach Linux Executable to Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./dist/xml-diff
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-        if: ${{ steps.release.outputs.release_created }}
-
-      - name: Attach Linux Patch Executable to Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./dist/xml-patch
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-        if: ${{ steps.release.outputs.release_created }}
-
-      - name: Attach Windows Executable to Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./dist-windows/xml-diff.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-        if: ${{ steps.release.outputs.release_created }}
-
-      - name: Attach Windows Patch Executable to Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./dist-windows/xml-patch.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-        if: ${{ steps.release.outputs.release_created }}
+          token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
