--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -29,7 +29,7 @@ jobs:
 
       -
         name: Build Executables
-        uses: ./.github/workflows/build-executables.yml
+        uses: chemodun/x4_xml_diff_and_patch/.github/workflows/build-executables.yml@main
         if: ${{ steps.release.outputs.release_created }}
 
       # Step 4: Attach Executables to Release
