--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -41,6 +41,11 @@ jobs:
         run: |
           pyinstaller --onefile xml-diff.py
           pyinstaller --onefile xml-patch.py
+          cd dist
+          mkdir -p x4_xml_diff_and_patch
+          cp xml-diff x4_xml_diff_and_patch/
+          cp xml-patch x4_xml_diff_and_patch/
+          tar -czvf x4_xml_diff_and_patch_linux.tar.gz x4_xml_diff_and_patch
         shell: bash
 
       # Step 6: Build Executables with PyInstaller (Windows)
@@ -49,6 +54,11 @@ jobs:
         run: |
           pyinstaller --onefile xml-diff.py
           pyinstaller --onefile xml-patch.py
+          cd dist
+          mkdir -p  x4_xml_diff_and_patch
+          cp xml-diff.exe x4_xml_diff_and_patch/
+          cp xml-patch.exe x4_xml_diff_and_patch/
+          Compress-Archive -Path x4_xml_diff_and_patch -DestinationPath x4_xml_diff_and_patch_windows.zip
         shell: powershell
 
       # Step 7: Upload Executables as Artifacts
@@ -57,43 +67,24 @@ jobs:
         with:
           name: executables-${{ matrix.os }}
           path: |
-            dist/xml-diff${{ matrix.os == 'windows-latest' && '.exe' || '' }}
-            dist/xml-patch${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+            dist/x4_xml_diff_and_patch${{ matrix.os == 'windows-latest' && '_windows.zip' || '_linux.tar.gz' }}
         env:
           GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
 
-      # Step 8: Attach Linux Diff Executable to Release
+      # Step 8: Attach Linux Diff and Patch Archive to Release
       - name: Attach Linux Diff Executable to Release
         uses: softprops/action-gh-release@v1
         if: matrix.os == 'ubuntu-latest'
         with:
-          files: ./dist/xml-diff
+          files: ./dist/x4_xml_diff_and_patch_linux.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
 
-      # Step 9: Attach Linux Patch Executable to Release
-      - name: Attach Linux Patch Executable to Release
-        uses: softprops/action-gh-release@v1
-        if: matrix.os == 'ubuntu-latest'
-        with:
-          files: ./dist/xml-patch
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-
-      # Step 10: Attach Windows Diff Executable to Release
+      # Step 9: Attach Windows Diff and Patch Archive to Release
       - name: Attach Windows Diff Executable to Release
         uses: softprops/action-gh-release@v1
         if: matrix.os == 'windows-latest'
         with:
-          files: ./dist/xml-diff.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-
-      # Step 11: Attach Windows Patch Executable to Release
-      - name: Attach Windows Patch Executable to Release
-        uses: softprops/action-gh-release@v1
-        if: matrix.os == 'windows-latest'
-        with:
-          files: ./dist/xml-patch.exe
+          files: ./dist/x4_xml_diff_and_patch_windows.zip
         env:
           GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
