--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -95,5 +95,5 @@ jobs:
           update_release_body: true
           vt_api_key: ${{ secrets.VT_API_KEY }}
           files: |
-            .zip$
-            .tar.gz$
+            *.zip
+            *.tar.gz
