--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,15 +11,18 @@ permissions:
 
 jobs:
   release-please:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
 
+      # Step 1: Checkout the repository
       -
         name: Checkout repository
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Release Please Action
+      # Step 2: Release Please Action
+      -
+        name: Release Please Action
         uses: google-github-actions/release-please-action@v3
         id: release
         with:
@@ -29,3 +32,60 @@ jobs:
           # bump-minor-pre-major: true
           # monorepo-tags: true
           token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+
+      # Step 2: Set up Python
+      -
+        name: Set up Python
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'  # Specify the Python version
+
+      # Step 3: Install dependencies
+      -
+        name: Install dependencies
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 4: Install PyInstaller
+      -
+        name: Install PyInstaller
+        if: ${{ steps.release.outputs.release_created }}
+        run: pip install pyinstaller
+
+      # Step 5: Build Executables with PyInstaller (Windows)
+      -
+        name: Build Executables with PyInstaller (Windows)
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          pyinstaller --onefile xml-diff.py
+          pyinstaller --onefile xml-patch.py
+          cd dist
+          mkdir -p  x4_xml_diff_and_patch
+          cp xml-diff.exe x4_xml_diff_and_patch/
+          cp xml-patch.exe x4_xml_diff_and_patch/
+          Compress-Archive -Path x4_xml_diff_and_patch -DestinationPath x4_xml_diff_and_patch_windows.zip
+        shell: powershell
+
+      # Step 6: Upload Executables as Artifacts
+      -
+        name: Upload Windows Diff and Patch Archive as Artifacts
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: archive-windows
+          path: |
+            dist/x4_xml_diff_and_patch_windows.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+
+      # Step 9: Attach Windows Diff and Patch Archive to Release
+      - name: Attach Windows Diff and Patch Archive to Release
+        uses: softprops/action-gh-release@v1
+        if: matrix.os == 'windows-latest'
+        with:
+          files: ./dist/x4_xml_diff_and_patch_windows.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
