chore(ci): update workflows to support Windows builds and integrate VirusTotal scanning

--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -1,9 +1,8 @@
 name: Build Executables
 
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types: [published]
 
 permissions:
   contents: write
@@ -13,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
     steps:
       # Step 1: Checkout the repository
       - name: Checkout repository
@@ -62,7 +61,7 @@ jobs:
         shell: powershell
 
       # Step 7: Upload Diff and Patch Archive as Artifacts
-      - name: Upload Executables as Artifacts
+      - name: Upload Diff and Patch Archive as Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: executables-${{ matrix.os }}
@@ -73,7 +72,7 @@ jobs:
 
       # Step 8: Attach Linux Diff and Patch Archive to Release
       - name: Attach Linux Diff and Patch Archive to Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         if: matrix.os == 'ubuntu-latest'
         with:
           files: ./dist/x4_xml_diff_and_patch_linux.tar.gz
@@ -82,9 +81,21 @@ jobs:
 
       # Step 9: Attach Windows Diff and Patch Archive to Release
       - name: Attach Windows Diff and Patch Archive to Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         if: matrix.os == 'windows-latest'
         with:
           files: ./dist/x4_xml_diff_and_patch_windows.zip
         env:
           GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+
+      # Step 10: Scan with VirusTotal
+      -
+        name: VirusTotal Scan
+        uses: crazy-max/ghaction-virustotal@v4
+        with:
+          update_release_body: true
+          vt_api_key: ${{ secrets.VT_API_KEY }}
+          github_token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          request_rate: 4
+          files: |
+            .${{ matrix.os == 'windows-latest' && 'zip' || 'tar.gz' }}$
