--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,10 +45,8 @@ jobs:
         with:
           name: executables-upload
           path: |
-            xml-diff.exe
-            xml-diff.cmd
-            xml-patch.exe
-            xml-patch.cmd
+            xml-diff.dist/xml-diff.exe
+            xml-patch.dist/xml-patch.exe
         env:
           GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
 
