--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,37 +26,31 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Install Nuitka
-      - name: Install Nuitka
+      # Step 4: Install PyInstaller
+      - name: Install PyInstaller
         run: |
-          python -m pip install nuitka
+          pip install pyinstaller
 
       # Step 5: Build Executables with Nuitka
       - name: Build Executable with Nuitka
         run: |
-          python -m nuitka --mingw64 xml-diff.py --assume-yes-for-downloads --standalone
-          python -m nuitka --mingw64 xml-patch.py --assume-yes-for-downloads --standalone
-          mv xml-diff.dist xml-diff
-          mv xml-patch.dist xml-patch
-          Compress-Archive -Path xml-diff -DestinationPath xml-diff.zip
-          Compress-Archive -Path xml-patch -DestinationPath xml-patch.zip
-          python -m nuitka --mingw64 xml-diff.py --assume-yes-for-downloads --onefile
-          python -m nuitka --mingw64 xml-patch.py --assume-yes-for-downloads --onefile
+          pyinstaller xml-diff.py
+          pyinstaller xml-patch.py
           ls -l .
         shell: powershell
 
       # Step 6: Upload Executables as Artifacts
-      - name: Upload Executables as Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: executables-upload
-          path: |
-            xml-diff.exe
-            xml-diff.zip
-            xml-patch.exe
-            xml-patch.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+      # - name: Upload Executables as Artifacts
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: executables-upload
+      #     path: |
+      #       xml-diff.exe
+      #       xml-diff.zip
+      #       xml-patch.exe
+      #       xml-patch.zip
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
 
 
       # Step 9: Scan with VirusTotal
