--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8'  # Specify the Python version
+          python-version: '3.x'  # Specify the Python version
 
       # Step 3: Install dependencies
       - name: Install dependencies
