--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'  # Specify the Python version
-          check-latest: true
-          architecture: 'x32'
+          #check-latest: true
 
       # Step 3: Install dependencies
       - name: Install dependencies
