--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'  # Specify the Python version
-          #check-latest: true
+          check-latest: true
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -32,17 +32,13 @@ jobs:
         run: |
           pip install pyinstaller
 
-      # Step 5: Download upx
-      - name: Download upx
-        run: |
-          Invoke-WebRequest -Uri "https://github.com/upx/upx/releases/download/v4.2.4/upx-4.2.4-win32.zip" -OutFile "upx-4.2.4-win32.zip"
-          Expand-Archive -Path "upx-4.2.4-win32.zip" -DestinationPath  "."
+
 
       # Step 5: Build Executables with PyInstaller
       - name: Build Executable with PyInstaller
         run: |
-          pyinstaller xml-diff.py --onefile --upx-dir upx-4.2.4-win32
-          pyinstaller xml-patch.py --onefile --upx-dir upx-4.2.4-win32
+          pyinstaller xml-diff.py --onefile
+          pyinstaller xml-patch.py --onefile
           Compress-Archive -Path dist\ -DestinationPath dist-onefile.zip
           ls -l .
         shell: powershell
@@ -69,3 +65,4 @@ jobs:
           request_rate: 4
           files: |
             .zip$
+            *.zip
